# python-i18n

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: auto-assign.yml  ci.yml  issues-top.yml
i18n/: __init__.py  config.py  defaults.py  exceptions.py  resource_loader.py  translations.py  translator.py
i18n/loaders/: json_loader.py  loader.py  python_loader.py  yaml_loader.py
i18n/tests/: __init__.py  loader_tests.py  run_tests.py  translation_tests.py
i18n/tests/resources/: dummy_config.py  dummy_config.yml  eucjp_config.json
i18n/tests/resources/settings/: dummy_config.py
i18n/tests/resources/translations/: en.json  foo.en.yml  gb.json  ja.json
i18n/tests/resources/translations/nested_dict_json/: en.json
i18n/tests/resources/translations/nested_dict_yaml/: en.yml
requirements/: dev.txt  test.txt
src/i18n/: config.py  defaults.py  formats.py  loader.py  resource_loader.py  translator.py
src/i18n/loaders/: loader.py  loader_mapper.py  yaml_loader.py  yml_loader.py
test/: test_loader.py  test_translation.py
test/resources/settings/: dummy_config.json
test/resources/translations/: foo.ja.yml
test/resources/translations/bar/: baz.en.json
test/resources/translations/nested_dict_json/: pl.json
